--- a/language-objc.cabal
+++ b/language-objc.cabal
@@ -32,12 +32,20 @@ Flag separateSYB
 
 Library
     Extensions: CPP, DeriveDataTypeable, PatternGuards, BangPatterns, ExistentialQuantification, GeneralizedNewtypeDeriving, ScopedTypeVariables
-    Build-Depends: base >= 3 && < 5, filepath, process, directory, array, containers, pretty
+
+    Build-Depends: base       >= 3 && < 5,
+                   filepath   == 1.3.*,
+                   process    == 1.1.*,
+                   directory  == 1.1.*,
+                   array      == 0.4.*,
+                   containers == 0.4.*,
+                   pretty     == 1.1.*
+    
 
     If flag(separateSYB)
       Build-Depends:
             base >=4 && <5,
-            syb
+            syb  == 0.3.*
     Else
       Build-Depends:
             base <4
