--- a/language-objc.cabal
+++ b/language-objc.cabal
@@ -37,7 +37,7 @@ Library
                    filepath   >= 1.1 && < 1.4,
                    process    == 1.1.*,
                    directory  >= 1.1 && < 1.3,
-                   array      == 0.4.*,
+                   array      >= 0.4 && < 0.6,
                    containers >= 0.4     && < 0.6,
                    newtype    == 0.2.*,
                    pretty     == 1.1.*
