--- a/language-objc.cabal
+++ b/language-objc.cabal
@@ -35,7 +35,7 @@ Library
 
     Build-Depends: base       >= 3 && < 5,
                    filepath   >= 1.1 && < 1.4,
-                   process    == 1.1.*,
+                   process    >= 1.1 && < 1.3,
                    directory  >= 1.1 && < 1.3,
                    array      >= 0.4 && < 0.6,
                    containers >= 0.4     && < 0.6,
